--- a/styles/index.css
+++ b/styles/index.css
@@ -1,3 +1,45 @@
 #banner_img {
     width: 80%;
 }
+
+html {
+    cursor: url("/assets/halloween_dog_cusror.png"), default;
+}
+
+h1 {
+    font-size: 3rem;
+}
+
+a {
+    padding: 5px 30px 0 30px;
+    background-color: #c8858e;
+    text-decoration: none;
+    color: white;
+}
+
+a:hover {
+    background-color: #bb6674;
+    border-bottom: 5px solid #804650;
+}
+
+li {
+    display: inline;
+}
+
+body {
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+
+main {
+    background-image: url("/assets/pattern-with-pet-footprint-overlapping-hexagons_637741-336.avif");
+    padding: 20px;
+    border: 1px solid black;
+    border-radius: 20px;
+    padding: 20px 50px;
+
+    p {
+        background-color: white;
+        border: 5px double black;
+        padding: 20px 50px;
+    }
+}
