--- a/styles/style.css
+++ b/styles/style.css
@@ -1,24 +1,33 @@
+html {
+    font-family: "Open-Dyslexic";
+}
+
 h1, h2, h3, h4 {
-    font-family: "Barrio";
+    font-family: "Open-Dyslexic";
     color: rgb(187, 102, 116);
 }
 
 body {
     background-color: lightgray;
-    margin-left: 10%;
-    margin-right: 10%;
     text-align: center;
     display: flex;
     flex-direction: column;
     min-height: 100vh;
 }
 
+h1 {
+    font-size: 64px;
+}
+
 main {
+    font-family: "Open-Dyslexic";
     flex: 1;
 }
 
 nav {
-    font-family: Papyrus;
+    font-family: "Open-Dyslexic";
+    justify-content: center;
+    background-color: rgb(195, 195, 195);
 }
 
 li {
@@ -27,9 +36,89 @@ li {
 }
 
 footer {
-    padding: 10px;
+    padding: 3%;
+    background-color: #993544;
+    color: lightgray;
+    width: 100%;
+}
+
+.container {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+}
+
+.nav-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
 }
 
 .navigation {
     display: inline;
+}
+
+.btn-container {
+    display: flex;
+    padding-top: 1%;
+    padding-bottom: 1%;
+}
+
+.box {
+    display: flex;
+}
+
+a.btn {
+    text-decoration: none;
+    color: #BB6674;
+    font-family: "Open-Dyslexic";
+    font-size: 18px;
+    line-height: 50px;
+    height: 50px;
+    width: 250px;
+    text-align: center;
+    cursor: pointer;
+    position: relative;
+    transition: all 0.3s;
+    cursor: url("/assets/leash_outline_icon.png"), default;
+}
+
+a.btn:hover span {
+    letter-spacing: 2px;
+}
+
+a.btn::before, a.btn::after {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+    transition: all 0.3s;
+}
+
+a.btn::before {
+    opacity: 0;
+    border-top: 1px solid #BB6674;
+    border-bottom: 1px solid #BB6674;
+    transform: scale(0.1, 1);
+}
+
+a.btn:hover::before {
+    opacity: 1;
+    transform: scale(1, 1);
+}
+
+a.btn::after {
+    background-color: rgba(255, 255, 255, 0);
+}
+
+a.btn:hover::after {
+    opacity: 0;
+    transform: scale(0.1, 1);
+}
+
+a.btn:visited {
+    color: #993544;
 }
