--- a/styles/gallery.css
+++ b/styles/gallery.css
@@ -1,71 +1,95 @@
-h1, h2, h4 {
+.grid-container {
+    display: grid;
+    grid-template-columns: repeat(10, 1fr);
+    grid-template-rows: repeat(8, 1fr);
+    grid-column-gap: 0px;
+    grid-row-gap: 0px;
+    width: 100%;
+    height: 100vh;
     font-family: "Open-Dyslexic";
+}
+
+header { 
+    grid-area: 1 / 1 / 2 / 11;
+    font-family: "Open-Dyslexic";
+    text-align: center;
+    padding: 10px;
+    background-color: #c8c6c6;
 }
 
 h1 {
-    margin-top: 15px;
-    margin-bottom: 0;
-}
-
-h4 {
     margin-top: 0;
+    margin-bottom: 0;
+    color: #539068;
+    text-shadow: -1px -1px 0 #1b2e22, 1px -1px 0 #1b2e22, -1px 1px 0 #1b2e22, 1px 1px 0 #1b2e22;
 }
 
-h2 {
-    margin-top: 30px;
+.subtitle {
+    font-size: 24px;
+    color: #1b2e22;
 }
 
-html, body {
-    font-family: "Open-Dyslexic";
-    width: 100%;
-    height: 100%;
-    margin: 0;
+main { 
+    grid-area: 2 / 1 / 10 / 11;
+    padding: 20px;
+    overflow: auto;
+    width: auto;
+}
+
+.figure-container {
     display: flex;
-    flex-direction: column;
-    cursor: url("/assets/leash_outline_icon.png"), default;
-}
-
-body {
-    align-items: center;
-    min-height: 100vh;
-}
-
-main {
-    flex-grow: 1;
-}
-
-footer {
-    font-family: "Open-Dyslexic";
-    color: #262730;
-    text-align: center;
+    justify-content: space-around;
+    overflow-x: auto;
+    white-space: nowrap;
     padding: 10px;
+    height: fit-content;
+    margin: 10px;
+    padding-bottom: 40px;
 }
 
-figure {
-    width: 50%;
-    margin: 0 auto;
+.figure-column {
     text-align: center;
+    justify-content: center;
+    height: 45vh;
+    padding-bottom: 10px;
 }
 
-figure img {
-    width: 100%;
-    height: auto;
-    border-radius: 20px;
-    box-shadow: rgba(187, 102, 116, 0.4) 0px 16px 38px, rgba(0, 0, 0, 0.22) 0px 7px 12px;
+.figure-column:first-child {
+    margin-left: 0;
+    padding-left: 0;
 }
 
-figcaption {
-    color: #BB6674;
-    display: block;
+.figure-column:last-child {
+    margin-right: 0;
+    padding-right: 0;
+}
+
+.figure-column img {
+    height: 100%;
+    width: auto;
+}
+
+.figure-column figcaption {
+    margin-top: 8px;
+    font-size: 0.9em;
+    color: #1b2e22;
     width: 100%;
-    margin-top: 10px;
-    margin-bottom: 30px;
     text-align: center;
+    white-space: normal;
+}
+
+footer { 
+    grid-area: 10 / 1 / 11 / 11;
+    font-family: "Open-Dyslexic";
+    text-align: center;
+    margin: 0;
+    padding: 0;
 }
 
 .btn-container {
     display: flex;
     padding-top: 15px;
+    padding-bottom: 0;
 }
 
 .box {
@@ -74,7 +98,7 @@ figcaption {
 
 a.btn {
     text-decoration: none;
-    color: #BB6674;
+    color: #993544;
     font-family: "Open-Dyslexic";
     font-size: 18px;
     line-height: 50px;
@@ -124,5 +148,5 @@ a.btn:hover::after {
 }
 
 a.btn:visited {
-    color: #ce99a2;
+    color: #BB6674;
 }
