--- a/styles/style.css
+++ b/styles/style.css
@@ -8,15 +8,27 @@ h1, h2, h3, h4 {
 }
 
 body {
-    background-color: lightgray;
+    background-color: #dedada;
     text-align: center;
     display: flex;
+    align-items: center;
     flex-direction: column;
     min-height: 100vh;
 }
 
+header {
+    background-color: #c8c6c6;
+    width: 100%;
+}
+
 h1 {
     font-size: 64px;
+    color: #539068;
+    text-shadow: -1px -1px 0 #1b2e22, 1px -1px 0 #1b2e22, -1px 1px 0 #1b2e22, 1px 1px 0 #1b2e22;
+}
+
+h2 {
+    font-size: 36px;
 }
 
 main {
@@ -27,18 +39,23 @@ main {
 nav {
     font-family: "Open-Dyslexic";
     justify-content: center;
-    background-color: rgb(195, 195, 195);
+    background-color: #c8c6c6;
 }
 
 li {
     padding-left: 30px;
     padding-right: 30px;
+    font-size: 1.25rem;
+}
+
+p {
+    font-size: 1.25rem;
 }
 
 footer {
     padding: 3%;
-    background-color: #993544;
-    color: lightgray;
+    background-color: #c8c6c6;
+    color: #1b2e22;
     width: 100%;
 }
 
