--- a/styles/facts.css
+++ b/styles/facts.css
@@ -1,50 +1,14 @@
 .list-facts {
    list-style: circle;
    text-align: left;
-   padding: 7px;
-   
+   padding: 10px;
 }
 
-h1 {
-    font-size: 2.5rem;
+ul {
+  margin: 0 17%;
 }
 
-body {
-    background-color: lightgray;
-    margin-left: 15%;
-    margin-right: 10%;
-    text-align: center;
-    font-family: "Haas Grot Text R Web", "Helvetica Neue", Helvetica, Arial, sans-serif;
-}
-
-.button-1 {
-  background-color: rgb(194, 91, 108);
-  border-radius: 8px;
-  border-style: none;
-  box-sizing: border-box;
-  color: #FFFFFF;
-  cursor: pointer;
-  display: inline-block;
-  font-family: "Haas Grot Text R Web", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-size: 14px;
-  font-weight: 500;
-  height: 40px;
-  line-height: 20px;
-  list-style: none;
-  margin: 0;
-  outline: none;
-  padding: 10px 16px;
-  position: relative;
-  text-align: center;
-  text-decoration: none;
-  transition: color 100ms;
-  vertical-align: baseline;
-  user-select: none;
-  -webkit-user-select: none;
-  touch-action: manipulation;
-}
-
-.button-1:hover,
-.button-1:focus {
-  background-color: #de9db6ce;
+main {
+  display: flex;
+  align-items: center;
 }
