--- a/styles/gallery.css
+++ b/styles/gallery.css
@@ -1,26 +1,21 @@
 .grid-container {
     display: grid;
-    grid-template-columns: repeat(10, 1fr);
-    grid-template-rows: repeat(8, 1fr);
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(10, 1fr);
     grid-column-gap: 0px;
     grid-row-gap: 0px;
     width: 100%;
     height: 100vh;
-    font-family: "Open-Dyslexic";
 }
 
 header { 
     grid-area: 1 / 1 / 2 / 11;
-    font-family: "Open-Dyslexic";
-    text-align: center;
     padding: 10px;
-    background-color: #c8c6c6;
 }
 
 h1 {
+    margin-top: 68px;
     margin-bottom: 0;
-    color: #539068;
-    text-shadow: -1px -1px 0 #1b2e22, 1px -1px 0 #1b2e22, -1px 1px 0 #1b2e22, 1px 1px 0 #1b2e22;
 }
 
 .subtitle {
@@ -79,73 +74,23 @@ main {
 
 footer { 
     grid-area: 10 / 1 / 11 / 11;
-    font-family: "Open-Dyslexic";
-    text-align: center;
-    margin: 0;
     padding: 0;
 }
 
 .btn-container {
-    display: flex;
     padding-top: 15px;
     padding-bottom: 0;
 }
 
-.box {
-    display: flex;
-}
-
 a.btn {
-    text-decoration: none;
-    color: #993544;
-    font-family: "Open-Dyslexic";
-    font-size: 18px;
-    line-height: 50px;
-    height: 50px;
-    width: 250px;
-    text-align: center;
-    cursor: pointer;
-    position: relative;
-    transition: all 0.3s;
-    cursor: url("/assets/leash_outline_icon.png"), default;
-}
-
-a.btn:hover span {
-    letter-spacing: 2px;
-}
-
-a.btn::before, a.btn::after {
-    content: '';
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: 1;
-    transition: all 0.3s;
+    color: #62222C;
 }
 
 a.btn::before {
-    opacity: 0;
-    border-top: 1px solid #BB6674;
-    border-bottom: 1px solid #BB6674;
-    transform: scale(0.1, 1);
-}
-
-a.btn:hover::before {
-    opacity: 1;
-    transform: scale(1, 1);
-}
-
-a.btn::after {
-    background-color: rgba(255, 255, 255, 0);
-}
-
-a.btn:hover::after {
-    opacity: 0;
-    transform: scale(0.1, 1);
+    border-top: 1px solid #823A44;
+    border-bottom: 1px solid #823A44;
 }
 
 a.btn:visited {
-    color: #BB6674;
+    color: #823A44;
 }
