--- a/styles/facts.css
+++ b/styles/facts.css
@@ -1,7 +1,7 @@
 .list-facts {
-   list-style: circle;
-   text-align: left;
-   padding: 10px;
+  list-style: circle;
+  text-align: left;
+  padding: 10px;
 }
 
 ul {
@@ -11,7 +11,7 @@ ul {
 main {
   display: flex;
   align-items: center;
-  padding-bottom: 2%;
+  padding-bottom: 2.5%;
 }
 
 .text-facts {
@@ -19,5 +19,5 @@ main {
 }
 
 h2 {
-  color: #BB6674
+  color: #BB6674;
 }
